--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,28 +20,28 @@ theme:
         name: Switch to light mode
 
 nav:
-- Embedded: "index.md"
-- Youtube:
-  - Altium Designer: "youtube/altium-designer.md"
-  - The Engineering Mindset: "youtube/engineering-mindset.md"
-  - Crash Course  : "youtube/crash-course.md"
-  - Engineers Post  : "youtube/engineerspost.md"
-  - Lesics  : "youtube/lesics.md"
-  - Realpars  : "youtube/realpars.md"
-- Embedded Expert: 
-  - Phil Koopman: "embedded/phil.md"
+- Embedded Roadmap  : "index.md"
+- Embedded Expert   : 
+  - Phil Koopman    : "embedded/phil.md"
   - Shawn Hymel Digikey: "embedded/shawn-hymel-digikey.md"
   - Embedded for all : "embedded/embedded-for-all.md"
   - Learn embedded systems : "embedded/learn-embedded-systems.md"
-  - Neso acedemy : "embedded/neso-acedemy.md"
+  - Neso acedemy    : "embedded/neso-acedemy.md"
   - Shriram vasudevan : "embedded/shriram-vasudevan.md"
-- Embedded Linux: 
-  - The Linux Foundation: "embedded-linux/the-linux-foundation.md"
-  - Cool Camera: "embedded-linux/cool-camera.md"
-  - Tech A Byte: "embedded-linux/tech-byte.md"
-  - Bootlin  : "embedded-linux/bootlin.md"
-  - HariHaran : "embedded-linux/hariharan.md"
-  - Learn Linux TV : "embedded-linux/learn-linux-tv.md"
-  - PhyTec : "embedded-linux/phytec.md"
-  - Techno Genius : "embedded-linux/techno-genius.md"
-  - Open NXP : "semi-companies/open-nxp.md"
+- Youtube :
+  - Altium Designer : "youtube/altium-designer.md"
+  - The Engineering Mindset : "youtube/engineering-mindset.md"
+  - Crash Course    : "youtube/crash-course.md"
+  - Engineers Post  : "youtube/engineerspost.md"
+  - Lesics          : "youtube/lesics.md"
+  - Realpars        : "youtube/realpars.md"
+- Embedded Linux  : 
+  - The Linux Foundation : "embedded-linux/the-linux-foundation.md"
+  - Cool Camera     : "embedded-linux/cool-camera.md"
+  - Tech A Byte     : "embedded-linux/tech-byte.md"
+  - Bootlin         : "embedded-linux/bootlin.md"
+  - HariHaran       : "embedded-linux/hariharan.md"
+  - Learn Linux TV  : "embedded-linux/learn-linux-tv.md"
+  - PhyTec          : "embedded-linux/phytec.md"
+  - Techno Genius   : "embedded-linux/techno-genius.md"
+  - Open NXP        : "semi-companies/open-nxp.md"
