--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps: 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20.x'
-          run: npm install
+      - name: Setup
+        uses: actions/setup-node@v3
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
+          node-version: '20.x'
           python-version: 3.x
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
           path: .cache
