--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps: 
-      - name: Setup
-        uses: actions/setup-node@v3
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
       - uses: actions/setup-python@v4
         with:
           node-version: '20.x'
