--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,40 +29,40 @@ nav:
   - Neso acedemy    : "embedded/neso-acedemy.md"
   - Shriram vasudevan : "embedded/shriram-vasudevan.md"
 - Embedded Technology :
-  - Linux Kernel : "embedded-tech/Readme.md"
-  - Bootloaders   : "embedded-tech/Readme.md"
-  - File Systems : "embedded-tech/Readme.md"
-  - Build Systems     : "embedded-tech/Readme.md"
-  - Package Managers  : "embedded-tech/Readme.md"
-  - Real Time Linux   : "embedded-tech/Readme.md"
-  - Device Drivers   : "embedded-tech/Readme.md"
-  - Frameworks and Libraries : "embedded-tech/Readme.md"
-  - Security Features  : "embedded-tech/Readme.md"
-  - Virtualization   : "embedded-tech/Readme.md"
-  - Containerization  : "embedded-tech/Readme.md"
-  - Board Support Packages : "embedded-tech/Readme.md"
-  - Single Board Computers : "embedded-tech/Readme.md"
-  - Cross Compilation Toolchains : "embedded-tech/Readme.md"
-  - Power Management  : "embedded-tech/Readme.md"
-  - Graphics and Display : "embedded-tech/Readme.md"
-  - Audio and Multimedia : "embedded-tech/Readme.md"
-  - Networking Protocols : "embedded-tech/Readme.md"
-  - Debugging and Profiling : "embedded-tech/Readme.md"
-  - RTOS Integration  : "embedded-tech/Readme.md"
-  - Firmware Updates and OTA Updates : "embedded-tech/Readme.md"
-  - Embedded Linux Distributions : "embedded-tech/Readme.md"
-  - Industrial Standards and Protocols : "embedded-tech/Readme.md"
-  - Cloud Integration  : "embedded-tech/Readme.md"
-  - Documentation and Community Resources: "embedded-tech/Readme.md"
-  - IoT Frameworks   : "embedded-tech/Readme.md"
-  - Machine Learning and AI Integration : "embedded-tech/Readme.md"
-  - Sensor Integration  : "embedded-tech/Readme.md"
-  - Human Machine Interface HMI : "embedded-tech/Readme.md"
-  - Localization and Internationalization: "embedded-tech/Readme.md"
-  - Remote Monitoring and Management : "embedded-tech/Readme.md"
-  - Battery Management  : "embedded-tech/Readme.md"
-  - Safety Critical Systems : "embedded-tech/Readme.md"
-  - Open Source Hardware Projects : "embedded-tech/Readme.md"
+  - Linux Kernel : "embedded-tech/Linux-Kernel/Readme.md"
+  - Bootloaders   : "embedded-tech/Bootloaders/Readme.md"
+  - File Systems : "embedded-tech/File-Systems/Readme.md"
+  - Build Systems     : "embedded-tech/Build-Systems/Readme.md"
+  - Package Managers  : "embedded-tech/Package-Managers/Readme.md"
+  - Real Time Linux   : "embedded-tech/Real-Time-Linux/Readme.md"
+  - Device Drivers   : "embedded-tech/Device-Drivers/Readme.md"
+  - Frameworks and Libraries : "embedded-tech/Frameworks-and-Libraries/Readme.md"
+  - Security Features  : "embedded-tech/Security-Features/Readme.md"
+  - Virtualization   : "embedded-tech/Virtualization/Readme.md"
+  - Containerization  : "embedded-tech/Containerization/Readme.md"
+  - Board Support Packages : "embedded-tech/Board-Support-Packages/Readme.md"
+  - Single Board Computers : "embedded-tech/Single-Board-Computers/Readme.md"
+  - Cross Compilation Toolchains : "embedded-tech/Cross-Compilation-Toolchains/Readme.md"
+  - Power Management  : "embedded-tech/Power-Management/Readme.md"
+  - Graphics and Display : "embedded-tech/Graphics-and-Display/Readme.md"
+  - Audio and Multimedia : "embedded-tech/Audio-and-Multimedia/Readme.md"
+  - Networking Protocols : "embedded-tech/Networking-Protocols/Readme.md"
+  - Debugging and Profiling : "embedded-tech/Debugging-and-Profiling/Readme.md"
+  - RTOS Integration  : "embedded-tech/RTOS-Integration/Readme.md"
+  - Firmware Updates and OTA Updates : "embedded-tech/Firmware-Updates-and-OTA-Updates/Readme.md"
+  - Embedded Linux Distributions : "embedded-tech/Embedded-Linux-Distributions/Readme.md"
+  - Industrial Standards and Protocols : "embedded-tech/Industrial-Standards-and-Protocols/Readme.md"
+  - Cloud Integration  : "embedded-tech/Cloud-Integration/Readme.md"
+  - Documentation and Community Resources: "embedded-tech/Documentation-and-Community-Resources/Readme.md"
+  - IoT Frameworks   : "embedded-tech/IoT-Frameworks/Readme.md"
+  - Machine Learning and AI Integration : "embedded-tech/Machine-Learning-and-AI-Integration/Readme.md"
+  - Sensor Integration  : "embedded-tech/Sensor-Integration/Readme.md"
+  - Human Machine Interface HMI : "embedded-tech/Human-Machine-Interface-HMI/Readme.md"
+  - Localization and Internationalization: "embedded-tech/Localization-and-Internationalization/Readme.md"
+  - Remote Monitoring and Management : "embedded-tech/Remote-Monitoring-and-Management/Readme.md"
+  - Battery Management  : "embedded-tech/Battery-Management/Readme.md"
+  - Safety Critical Systems : "embedded-tech/Safety-Critical-Systems/Readme.md"
+  - Open Source Hardware Projects : "embedded-tech/Open-Source-Hardware-Projects/Readme.md"
 - Embedded Linux  : 
   - The Linux Foundation : "embedded-linux/the-linux-foundation.md"
   - Cool Camera     : "embedded-linux/cool-camera.md"
